слайдер + новые фото

--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,7 @@
     <link rel="manifest" href="https://garage-codd.ru/favicons/site.webmanifest">
     <link rel="mask-icon" href="https://garage-codd.ru/favicons/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
-<!--    <meta name="theme-color" content="#000000"/>-->
+    <meta name="theme-color" content="#090909"/>
 <!--    &lt;!&ndash; Primary Meta Tags &ndash;&gt;-->
 <!--    <meta name="title" content="Гараж ЦОДД"/>-->
 <!--    <meta name="description" content="Гараж ЦОДД"/>-->
@@ -117,7 +116,7 @@
                         <a class="menu_navigation-link" href="#help_desk">Служба помощи</a>
                         <div class="menu_preview-block">
                             <div class="block-wrapper-video">
-                                <video class="menu_preview-video" src="./img/video/salaris_gray.mp4" muted loop playsinline></video>
+                                <video class="menu_preview-video" src="./img/video/help_menu.mp4" muted loop playsinline></video>
                             </div>
                         </div>
                     </li>
@@ -1035,8 +1034,8 @@
                     <div class="slide-moskvich parentCardForLargeMonitor">
                         <a class="garage_model_card" href="./pages/moskvich.html">
                             <div class="slid_img">
-                                <img class="menu_preview-img" src="./img/layout/pages/main/slider/solaris_gray.png" alt="Служба помощи ЦОДДр">
-                                <video class="menu_preview-video" src="./img/video/salaris_gray.mp4" muted loop playsinline></video>
+                                <img class="menu_preview-img" src="./img/layout/pages/main/slider/moskvich.png" alt="Служба помощи ЦОДДр">
+                                <video class="menu_preview-video" src="./img/video/moskvich.mp4" muted loop playsinline></video>
                             </div>
                             <div class="slid_info">
                                 <div class="slid_info-desc">
