--- a/src/pages/moskvich.html
+++ b/src/pages/moskvich.html
@@ -16,8 +16,7 @@
     <link rel="manifest" href="https://garage-codd.ru/favicons/site.webmanifest">
     <link rel="mask-icon" href="https://garage-codd.ru/favicons/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
-    <!--    <meta name="theme-color" content="#000000"/>-->
+    <meta name="theme-color" content="#090909">
     <!--    &lt;!&ndash; Primary Meta Tags &ndash;&gt;-->
     <!--    <meta name="title" content="Гараж ЦОДД"/>-->
     <!--    <meta name="description" content="Гараж ЦОДД"/>-->
@@ -139,9 +138,9 @@
                 <p class="header__logo-text">Гараж ЦОДД</p>
             </a>
             <div class="header__info">
-                <img class="header__info-img" src="../img/layout/header_img2.png" alt="model_preview">
+                <img class="header__info-img" src="../img/layout/header_models/preview_moskvich.png" alt="model_preview">
                 <div class="header__info-descr">
-                    <p class="header__info-text">Москвич 3е</p>
+                    <p class="header__info-title">Москвич 3е</p>
 <!--                    <p class="header__info-text">125 автомобилей</p>-->
                 </div>
             </div>
@@ -271,43 +270,43 @@
                 <img class="rotate" src="../img/layout/auto_park_arrow.svg" alt="auto_park_btn">
             </div>
             <div class="auto_park_slider">
-                <div class="auto_park_slider-overflow">
-                    <div class="auto_park_slider-wrapper">
-                        <div class="gallery_item">
+                <div class="auto_park_slider-overflow swiper_model">
+                    <div class="auto_park_slider-wrapper swiper-wrapper">
+                        <div class="gallery_item swiper-slide">
                             <a class="gallery_item_link" href="../pages/amarok.html">
                                 <img class="gallery_item-img" src="../img/layout/pages/main/slider/amarok.png" alt="amarok">
                             </a>
                         </div>
-                        <div class="gallery_item">
+                        <div class="gallery_item swiper-slide">
                             <a class="gallery_item_link" href="../pages/ford.html">
                                 <img class="gallery_item-img" src="../img/layout/pages/main/slider/ford.png" alt="ford">
                             </a>
                         </div>
-                        <div class="gallery_item">
+                        <div class="gallery_item swiper-slide">
                             <a class="gallery_item_link" href="../pages/kater.html">
                                 <img class="gallery_item-img" src="../img/layout/pages/main/slider/kater.png" alt="kater">
                             </a>
                         </div>
-                        <div class="gallery_item">
+                        <div class="gallery_item swiper-slide">
                             <a class="gallery_item_link" href="../pages/solaris_two.html">
                                 <img class="gallery_item-img" src="../img/layout/pages/main/slider/solaris_gray.png" alt="solaris">
                             </a>
                         </div>
-                        <div class="gallery_item">
+                        <div class="gallery_item swiper-slide">
                             <a class="gallery_item_link" href="../pages/bus.html">
                                 <img class="gallery_item-img" src="../img/layout/pages/main/slider/bus.png" alt="bus">
                             </a>
                         </div>
-                        <div class="gallery_item active">
+                        <div class="gallery_item swiper-slide active">
                             <a class="gallery_item_link" href="#">
-<!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/moskvich.png" alt="moskvich">-->
+                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/moskvich.png" alt="moskvich">
                             </a>
                         </div>
-                        <div class="gallery_item">
-                            <a class="gallery_item_link" href="../pages/velo.html">
+<!--                        <div class="gallery_item swiper-slide">-->
+<!--                            <a class="gallery_item_link" href="../pages/velo.html">-->
 <!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/velo.png" alt="velo">-->
-                            </a>
-                        </div>
+<!--                            </a>-->
+<!--                        </div>-->
                     </div>
                 </div>
                 <div class="auto_park_slider-button">
@@ -346,7 +345,7 @@
 
         <img
                 id="room1"
-                src="../img/layout/pages/main/360/moskvich/moscvich.jpg"
+                src="../img/layout/pages/main/360/moskvich/moscvich.png"
                 crossorigin="anonymous"
                 importance="high"
         />
@@ -623,5 +622,6 @@
         });
     // }, 1500);
 </script>
+<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 </body>
 </html>
