видео в карточках + слайдер

--- a/src/index.html
+++ b/src/index.html
@@ -553,7 +553,7 @@
                         <a class="garage_model_card" href="./pages/bus.html">
                             <div class="slid_img">
                                 <img class="menu_preview-img" src="./img/layout/pages/main/slider/bus.png" alt="Ситуационный центр">
-                                <video class="menu_preview-video" src="./img/video/bus.mp4" muted loop playsinline></video>
+                                <video class="menu_preview-video" src="./img/video/test_video_card.MP4" muted loop playsinline></video>
                             </div>
                             <div class="slid_info">
                                 <div class="slid_info-desc">
@@ -716,7 +716,7 @@
                         <a class="garage_model_card" href="./pages/velo.html">
                             <div class="slid_img">
                                 <img class="menu_preview-img" src="./img/layout/pages/main/slider/amarok.png" alt="Патрульный пикап">
-                                <video class="menu_preview-video" src="./img/video/amarok.mp4" muted loop playsinline></video>
+                                <video class="menu_preview-video" src="./img/video/test_video_card.MP4" muted loop playsinline></video>
                             </div>
                             <div class="slid_info">
                                 <div class="slid_info-desc">
@@ -1060,7 +1060,7 @@
                             <div class="traffic_patrol_slider swiper-wrapper">
                                 <a class="garage_model_card swiper-slide" href="./pages/solaris_two.html">
                                     <div class="slid_img">
-                                        <img class="menu_preview-img" src="./img/layout/pages/main/slider/solaris_gray.png" alt="Служба помощи ЦОДДр">
+                                        <img class="menu_preview-img" src="./img/layout/pages/main/slider/solaris_gray.png" alt="Служба помощи ЦОДД">
                                         <video class="menu_preview-video" src="./img/video/salaris_gray.mp4" muted loop playsinline></video>
                                     </div>
                                     <div class="slid_info">
@@ -1082,8 +1082,8 @@
                                 </a>
                                 <a class="garage_model_card swiper-slide" href="./pages/moskvich.html">
                                     <div class="slid_img">
-                                        <img class="menu_preview-img" src="./img/layout/pages/main/slider/solaris_gray.png" alt="Служба помощи ЦОДДр">
-                                        <video class="menu_preview-video" src="./img/video/salaris_gray.mp4" muted loop playsinline></video>
+                                        <img class="menu_preview-img" src="./img/layout/pages/main/slider/moskvich.png" alt="Служба помощи ЦОДД">
+                                        <video class="menu_preview-video" src="./img/video/moskvich.mp4" muted loop playsinline></video>
                                     </div>
                                     <div class="slid_info">
                                         <div class="slid_info-desc">
