--- a/src/pages/amarok.html
+++ b/src/pages/amarok.html
@@ -141,7 +141,7 @@
                 <img class="header__info-img" src="../img/layout/header_models/preview_amarock.png" alt="model_preview">
                 <div class="header__info-descr">
                     <p class="header__info-title">Volkswagen Amarok</p>
-                    <p class="header__info-text">30 автомобилей</p>
+<!--                    <p class="header__info-text">30 автомобилей</p>-->
                 </div>
             </div>
         </div>
