--- a/src/pages/bus.html
+++ b/src/pages/bus.html
@@ -141,7 +141,7 @@
                 <img class="header__info-img" src="../img/layout/header_models/preview_bus.png" alt="model_preview">
                 <div class="header__info-descr">
                     <p class="header__info-title">Man</p>
-                    <p class="header__info-text">1 транспортное средство</p>
+<!--                    <p class="header__info-text">1 транспортное средство</p>-->
                 </div>
             </div>
         </div>
