--- a/src/pages/solaris.html
+++ b/src/pages/solaris.html
@@ -142,7 +142,7 @@
                 <img class="header__info-img" src="../img/layout/header_img2.png" alt="model_preview">
                 <div class="header__info-descr">
                     <p class="header__info-text">Дорожный патруль</p>
-                    <p class="header__info-text">30 автомобилей</p>
+<!--                    <p class="header__info-text">30 автомобилей</p>-->
                 </div>
             </div>
         </div>
