--- a/src/pages/velo.html
+++ b/src/pages/velo.html
@@ -141,7 +141,7 @@
                 <img class="header__info-img" src="../img/layout/header_img2.png" alt="model_preview">
                 <div class="header__info-descr">
                     <p class="header__info-title">Велосипед</p>
-                    <p class="header__info-text">9 велосипедов</p>
+<!--                    <p class="header__info-text">9 велосипедов</p>-->
                 </div>
             </div>
         </div>
