--- a/src/pages/solaris_two.html
+++ b/src/pages/solaris_two.html
@@ -141,7 +141,7 @@
                 <img class="header__info-img" src="../img/layout/header_models/preview_solaris.png" alt="model_preview">
                 <div class="header__info-descr">
                     <p class="header__info-title">Hyundai Solaris</p>
-                    <p class="header__info-text">110 автомобилей</p>
+<!--                    <p class="header__info-text">110 автомобилей</p>-->
                 </div>
             </div>
         </div>
