сжатие контента и новые форматы

--- a/src/pages/bus.html
+++ b/src/pages/bus.html
@@ -306,19 +306,19 @@
 
         <img
                 id="room1"
-                src="../img/layout/pages/main/360/bus/bus_1.jpg"
+                src="../img/layout/pages/main/360/bus/bus_1.png"
                 crossorigin="anonymous"
                 importance="high"
         />
         <img
                 id="room2"
-                src="../img/layout/pages/main/360/bus/bus_2.jpg"
+                src="../img/layout/pages/main/360/bus/bus_2.png"
                 crossorigin="anonymous"
                 importance="low"
         />
         <img
                 id="room3"
-                src="../img/layout/pages/main/360/bus/bus_3.jpg"
+                src="../img/layout/pages/main/360/bus/bus_3.png"
                 crossorigin="anonymous"
                 importance="low"
         />
