--- a/src/pages/velo.html
+++ b/src/pages/velo.html
@@ -138,7 +138,7 @@
                 <p class="header__logo-text">Гараж ЦОДД</p>
             </a>
             <div class="header__info">
-                <img class="header__info-img" src="../img/layout/header_img2.png" alt="model_preview">
+                <img class="header__info-img" src="../img/layout/header_models/preview_ford.png" alt="model_preview">
                 <div class="header__info-descr">
                     <p class="header__info-title">Велосипед</p>
 <!--                    <p class="header__info-text">9 велосипедов</p>-->
