--- a/src/pages/solaris.html
+++ b/src/pages/solaris.html
@@ -139,7 +139,7 @@
                 <p class="header__logo-text">Гараж ЦОДД</p>
             </a>
             <div class="header__info">
-                <img class="header__info-img" src="../img/layout/header_img2.png" alt="model_preview">
+                <img class="header__info-img" src="../img/layout/header_models/preview_ford.png" alt="model_preview">
                 <div class="header__info-descr">
                     <p class="header__info-text">Дорожный патруль</p>
 <!--                    <p class="header__info-text">30 автомобилей</p>-->
